Process Hacker

2.38
 * HIGHLIGHTS:
 * OTHER CHANGES:
   * Fixed ASLR state being shown as N/A in process properties
   * Improved performance when handling a large number of threads, modules or handles
   * Updated UserNotes plugin:
     * Added "Collapse by Default" option for processes

2.37
 * HIGHLIGHTS:
   * Updated for Windows 10
   * The "Include CPU (and other) usage of children in collapsed processes" option now aggregates memory and I/O statistics
   * Added regex search to "Find Handles or DLLs"
   * Added process exit codes to log
   * Fixed crash that occurred under some conditions when processes terminated
 * OTHER CHANGES:
   * Added warning when trying to search for handles when the system has too many handles open
   * Upgraded to PCRE2
   * Updated DotNetTools plugin:
     * Rewrite of .NET Performance statistics and AppDomain enumeration
   * Updated OnlineChecks plugin:
     * Fixed virusscan.jotti.org uploader
   * Updated NetAdapters plugin:
     * Added adapter details window
   * Updated ToolStatus plugin:
     * Added CPU, Memory and I/O graphs to the toolbar (not enabled by default)
     * Added toolbar and status bar customization, as well as a new theme
     * Added option to auto-hide the main menu
   * Updated UserNotes plugin:
     * Added individual process highlighting support

2.36
 * HIGHLIGHTS:
   * New rich pop-up UI when hovering the cursor over a tray icon, showing the most active processes
   * Completely new Memory tab for processes, with heap, stack and working set usage
   * Process Hacker now takes 32-bit dumps of 32-bit processes on 64-bit Windows
     * NOTE: When using the portable (.zip) release, the entire archive must be extracted
   * Updated DotNetTools plugin:
     * Process Hacker now displays managed stack traces for 32-bit .NET processes on 64-bit Windows
     * Fixed inaccurate stack traces when clicking Refresh
     * Added AppDomain column for threads in .NET programs
 * OTHER CHANGES: